# legal-mcp

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  MCP_GUIDE.md  Makefile  README.md  app.py  example.py  pyproject.toml  requirements.txt  run.bat  run.ps1
assets/: README.md
legal_mcp/: __init__.py
legal_mcp/backends/: __init__.py  legal_research.py  ollama.py
legal_mcp/domain/: __init__.py  context.py  legal_research.py  pdf.py
legal_mcp/server/: __init__.py  __main__.py  app.py  main.py
legal_mcp/tools/: __init__.py  legal_research.py
scripts/: run_windows11.bat  run_windows11.ps1
static/: api.js  index.html  script.js  style.css
tests/: __init__.py  test_legal_research_tool.py
