[project]
name = "legal-mcp"
version = "0.1.0"
description = "Legal-MCP framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pypdf",
    "requests",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app"]
